Subo el proyecto 15 corregido

--- a/M_15_Membrane_Keyboard_HAL/M_15_Membrane_Keyboard_HAL.ioc
+++ b/M_15_Membrane_Keyboard_HAL/M_15_Membrane_Keyboard_HAL.ioc
@@ -97,8 +97,9 @@ PA9.GPIO_Label=COLUMN_3
 PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.Locked=true
 PA9.Signal=GPXTI9
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=COLUMNA_1
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=COLUMN_1
+PB10.GPIO_PuPd=GPIO_PULLDOWN
 PB10.Locked=true
 PB10.Signal=GPXTI10
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
@@ -126,7 +127,7 @@ PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC7.GPIO_Label=COLUMNA_4
+PC7.GPIO_Label=COLUMN_4
 PC7.GPIO_PuPd=GPIO_PULLDOWN
 PC7.Locked=true
 PC7.Signal=GPXTI7
